2.0.2 2024/01/19 PKG
    * Update citations and copyright in AUTHORS and README.md
    * Fix typos
    * Bugfixes in packaging material
    * Allow specifying Python interpreter for "gyoto mk-video..." 

2.0.1 2024/01/17 BUG
    * Update build system
        * ARBLIB is included in flint >= 3, fix includes and configure.ac accordingly
        * Update autotools
        * Error out when Eigen is not found at configure-time
    * Various bug fixes

2.0.0 2024/01/02 ABI 9:0:0 
    * Adding the ability to compute polarization quantities:
        * Implement all polarized synchrotron radiative transfer coefficients 
          for Thermal, PowerLaw and Kappa distributions
        * Compute of the transmission matrix
        * Calcul of the polarization angle in the observer
          polarization basis parallel transported and projected
          in the rest frame of the emitter
        * Adding the eigen3 library
    * various bugfix
    * New common definition of magnetic field configuration accessible by all Astrobj
    * New N-dimensonnal linear interpolation function with configurable boundary conditions
    * New Astrobj::FreeStar:
        Similar to the Star object expect it does not follow a time-like geodesic.
        The Trajectory is define by the user through the initial position and velocity
    * Astrobj::Blob:
        + electronDistribution_
    * New Astrobj::Plasmoid:
        Uniform sphere of Plasma with a constant or linear increase of the radius.
        Two types of orbits : 
          - Circular in the equatorial plane
          - Helical (constant polar angle)
        j_nu and a_nu are read in fits file.
    * New class : FitsRW:
        Class which generates fits file from outputs of simulations
          for the Astrobj::Plasmoid
    * KappaDistributionSynchrotronSpectrum: correction of the calculation of j_nu and a_nu
    * PowerLawSynchrotronSpectrum: correction of the calculation of j_nu and a_nu
    * Astrobj::FlaredDiskSynchrotron: