@@ -2,7 +2,6 @@
 <Scenery>
 
   <Metric kind = "RezzollaZhidenko">
-    <Spin> 0. </Spin>
     <Mass unit="sunmass"> 4e6 </Mass>
   </Metric>
 
@@ -23,7 +22,6 @@
   <Astrobj kind = "FixedStar">
     <Radius> 12 </Radius>
     <Position> 0 0 0 </Position>
-    <UseGenericImpact/>
     <Spectrum kind="PowerLaw">
       <Exponent> 0 </Exponent>
       <Constant> 0.001 </Constant>
