@@ -23,7 +23,6 @@
   <Astrobj kind = "FixedStar">
     <Radius> 12 </Radius>
     <Position> 0 0 0 </Position>
-    <UseGenericImpact/>
     <Spectrum kind="PowerLaw">
       <Exponent> 0 </Exponent>
       <Constant> 0.001 </Constant>
